Complete repository reset with new content

--- a/1.html
+++ b/1.html
@@ -28,7 +28,7 @@ Vakhtang Beridze<br>
 <br>
 </div>
 <div class="text-col-2">
-1Vakhtang Beridze’s album of caricatures, created in 1941-1942 is a unique document that has not
+Vakhtang Beridze’s album of caricatures, created in 1941-1942 is a unique document that has not
 been published and has thus remained unknown to the general public. The album playfully
 depicts the first years of the Institute’s foundation in the trying decade of the 40s, the
 temperament and habits of its founding scientists. Vakhtang Beridze (1914, Kutaisi – 2000, Tbilisi)
